crates/test-files/fixtures/compile_errors/indexed_event.fe
contract Foo {
    event MyEvent {
        idx addr1: address
        idx addr2: address
        idx addr3: address
        idx addr4: address
    }
}
